# mk

./: CMakeLists.txt  Files.config  MarkKiller.cpp  ffmpeg-install.ssh  opencv.sh
include/dlib/all/: source.cpp
include/transcode/: BasicTranscode.h  Transcode.h
include/xmarker/: mark.h  marklogo.h  marktext.h  marktextbox.h  xmarker.h
text/: erfilter.cpp
tobin/: Files.config
transcode/: BasicTranscode.cpp  Transcode.cpp
xmarker/: mark.cpp  marklogo.cpp  marktextbox.cpp  xmarker.cpp
